Fixed bugs related to error handling for APK tester.
Added SSH key path to .env to make it portable.

Finished README.

--- a/config.ini
+++ b/config.ini
@@ -8,10 +8,10 @@ STATS_FILE = stats.txt
 ERRORS_FILE = errors.txt
 
 [APK_Test]
-MAX_APK_NB = 1
+MAX_APK_NB_TA = 40
 
 [Virus_Scan]
-MAX_APK_NB_VS = 1
+MAX_APK_NB_VS = 60
 
 # Higher number of attempts means daily limit in VirusTotal is reached
 MAX_ATTEMPT = 4
