Updated docs for more information.
VirusTotal API URLs were transferred to config.ini

--- a/config.ini
+++ b/config.ini
@@ -3,15 +3,19 @@ EMULATOR_PATH = ~/Android/Sdk/emulator/emulator
 ADB_PATH = ~/Android/Sdk/platform-tools/adb
 AAPT_PATH = ~/Android/Sdk/build-tools/36.0.0/aapt
 
+[API_URLs]
+API_SCAN_URL = https://www.virustotal.com/vtapi/v2/file/scan
+API_REPORT_URL = https://www.virustotal.com/vtapi/v2/file/report
+
 [Files]
 STATS_FILE = stats.txt
 ERRORS_FILE = errors.txt
 
 [APK_Test]
-MAX_APK_NB_TA = 50
+MAX_APK_NB_TA = 10
 
 [Virus_Scan]
-MAX_APK_NB_VS = 110
+MAX_APK_NB_VS = 10
 
 # Higher number of attempts means daily limit in VirusTotal is reached
 MAX_ATTEMPT = 4
